--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,7 @@
         <a class="navbar-brand" href="#">TrainHard</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Jajo", "/path1"  %></li>
-            <li><%= link_to "Blabla", "/path2"  %></li>
-            <li><%= link_to "OzimPała", "/path3"  %></li>
+            <li><%= link_to "HOME", root_path  %></li>
           </ul>
         </div>
       </div>
