--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,9 @@
  *= require_tree .
  *= require_self
  */
+
+.discipline-name {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5em;
+}
