add description to disciplines

--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -7,6 +7,9 @@
       <div class="discipline-name">
         <%= discipline.name %>
       </div>
+      <div class="discipline-description">
+        <%= discipline.description %>
+      </div>
     </div>
   </div>
 
