--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row col-xs-8 col-xs-offset-2">
     <div class="well well-lg">
       <div class="discipline-name">
-        <%= discipline.name %>
+        <%= link_to discipline.name, discipline_path(discipline) %>
       </div>
       <div class="discipline-description">
         <%= discipline.description %>
