--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,13 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "HOME", root_path  %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Disciplines <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Disciplines", disciplines_path %></li>
+                <li><%= link_to "New Discipline", new_discipline_path %></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
