--- a/app/views/disciplines/new.erb
+++ b/app/views/disciplines/new.erb
@@ -1,14 +1,29 @@
-<h1>Create new discipline</h1>
-<%= form_for(@discipline, :html => { class: "form-horizontal", role: "form" }) do |f| %>
-  <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, placeholder: "Discipline name" %>
+<h1 align="center">Create new discipline</h1>
+
+<div class="row">
+  <div class="col-sm-12">
+    <%= form_for(@discipline, :html => { class: "form-horizontal", role: "form" }) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :name %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :name, class: "form-control", placeholder: "Discipline name" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :description %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_area :description, class: "form-control", rows: 10, placeholder: "Discipline description" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit "Add new discipline", class: "btn btn-primary btn-big" %>
+        </div>
+      </div>
+    <% end %>
   </div>
-  <div class="form-group">
-    <%= f.label :description %>
-    <%= f.text_area :description, rows: 10, placeholder: "Discipline description" %>
-  </div>
-  <div class="form-group">
-    <%= f.submit "Add new discipline", class: "btn btn-primary btn-big" %>
-  </div>
-<% end %>
+</div>
