add form partial and edit form

--- a/app/views/disciplines/show.erb
+++ b/app/views/disciplines/show.erb
@@ -6,6 +6,6 @@
   </div>
 </div>
 
-<div class="btn">
+<div class="btn btn-primary btn-big">
   <%= link_to "edit discipline", edit_discipline_path(@discipline) %>
 </div>
