--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -1,10 +1,9 @@
 <h1> Treningi </h1>
-
 <ul>
   <% @trainings.each do |training| %>
-
-    <li> <%= link_to training.name, user_training_path(current_user,training) %>     <%= "--  #{training.user.name}" %>  </li>
-
+    <li>
+      <%= link_to training.name, user_training_path(current_user,training) %>
+      <%= "--  #{training.user.name}" %>
+    </li>
   <% end %>
-
 </ul>
