update button and add truncate to index view

--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="discipline-description">
         <hr>
-        <%= discipline.description %>
+        <%= truncate(discipline.description, :length => 100) %>
       </div>
     </div>
   </div>
