--- a/app/views/disciplines/show.erb
+++ b/app/views/disciplines/show.erb
@@ -6,6 +6,5 @@
   </div>
 </div>
 
-<div class="btn btn-primary btn-big">
-  <%= link_to "edit discipline", edit_discipline_path(@discipline) %>
-</div>
+
+  <%= link_to "edit discipline", edit_discipline_path(@discipline), class: "btn btn-xs btn-primary" %>
