--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,9 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Disciplines <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Disciplines", disciplines_path %></li>
-                <li><%= link_to "New Discipline", new_discipline_path %></li>
+                <% if current_user.admin? %>
+                  <li><%= link_to "New Discipline", new_discipline_path %></li>
+                <% end %>
               </ul>
             </li>
           </ul>
