--- a/app/views/places/index.erb
+++ b/app/views/places/index.erb
@@ -1,5 +1,22 @@
-<% @place.each do |place| %>
+<h1 align="center">Place</h1>
+<% @places.each do |place| %>
+  <div class="row col-xs-8 col-xs-offset-2">
+    <div class="well well-lg">
+      <div class="place_country">
+        <%= place.country %>
+      </div>
+      <div class="place_city">
+        <%= place.city %>
+      </div>
+      <div class="place_resort">
+        <%= place.resort %>
+      </div>
+      <div class="place_otherPlace">
+        <%= place.otherPlace %>
+      </div>
+      <div class="place_gpsCoordinates">
+        <%= place.gpsCoordinates %>
+      </div>
+    </div>
+  </div>
 <% end %>
-<h1>test dzialania</h1>
-# place1 = Place.create(resort:"szczyrk")
-# %i(aaa qqq qqq) -> szybsza tablica
