--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,13 @@
                 <li><%= link_to "New Discipline", new_discipline_path %></li>
               </ul>
             </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Place <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Places", places_path %></li>
+                <li><%= link_to "New Places", new_place_path %></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
