--- a/app/views/places/new.erb
+++ b/app/views/places/new.erb
@@ -1,1 +1,26 @@
-<%= select_tag(:category_id, options_for_select(@categories), :prompt => “Select one!”) %>
+<h1>Add Place</h1>
+<%= form_for(@place, :html => { class: "form-horizontal", role: "form" }) do |f| %>
+  <div class="form-group">
+    <%= f.label :country %>
+    <%= f.text_field :country, placeholder: "country" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :city %>
+    <%= f.text_field :city, placeholder: "city" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :resort %>
+    <%= f.text_field :resort, placeholder: "resort" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :otherPlace %>
+    <%= f.text_field :otherPlace, placeholder: "otherPlace" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :gpsCoordinates %>
+    <%= f.text_field :gpsCoordinates, placeholder: "gpsCoordinates" %>
+  </div>
+  <div class="form-group">
+    <%= f.submit "Add Place", class: "btn btn-primary btn-big" %>
+  </div>
+<% end %>
