--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
                 <li><%= link_to "New Discipline", new_discipline_path %></li>
               </ul>
             </li>
+            <li><%= link_to "My Trainings", user_trainings_path(current_user) %></li>
           </ul>
         </div>
       </div>
