--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,9 @@
                 <% end %>
               </ul>
             </li>
-            <li><%= link_to "My Trainings", user_trainings_path(current_user) %></li>
+            <% if current_user %>
+              <li><%= link_to "My Trainings", user_trainings_path(current_user) %></li>
+            <% end %>
           </ul>
         </div>
       </div>
