--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,47 +19,4 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">TrainHard</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "HOME", root_path  %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Disciplines <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Disciplines", disciplines_path %></li>
-                <% if current_user.admin? %>
-                  <li><%= link_to "New Discipline", new_discipline_path %></li>
-                <% end %>
-              </ul>
-            </li>
-            <% if user_signed_in? %>
-              <li><%= link_to "My Trainings", user_trainings_path(current_user) %></li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-9">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div><!--/row-->
-
-      <footer>
-        <p>&copy; Company 2018</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+  <%= render 'layouts/navigation' %>
