--- a/app/views/disciplines/show.erb
+++ b/app/views/disciplines/show.erb
@@ -5,6 +5,6 @@
     <%= @discipline.description %>
   </div>
 </div>
-<% if current_user && current_user.admin? %>
+<% if current_user.admin? %>
   <%= link_to "edit discipline", edit_discipline_path(@discipline), class: "btn btn-xs btn-primary" %>
 <% end %>
