--- a/app/views/disciplines/show.erb
+++ b/app/views/disciplines/show.erb
@@ -8,7 +8,7 @@
 <div class="row">
   <% if current_user.admin? %>
     <%= link_to "Edit discipline", edit_discipline_path(@discipline), class: "btn btn-xs btn-primary" %>
-    <%= link_to "Delete discipline", discipline_path(@discipline), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-xs btn-danger" %>
+    <%= link_to "Delete discipline", discipline_path(@discipline), method: :delete, data: { confirm: "Żeś pewien?" }, class: "btn btn-xs btn-danger" %>
   <% end %>
 </div>
   
