--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,1 +1,3 @@
 <h1>Witamy sportowego świra </h1>
+
+<img src="https://3lbf6l2jthwj1sovtw21iy86-wpengine.netdna-ssl.com/wp-content/uploads/2017/06/Arnold-Schwarzenegger-696x426.jpeg" class="img-thumbnail">
