--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,3 +1,3 @@
 <%= link_to "logout", destroy_user_session_path, method: :delete %>
 
-<h1>Witamy sportowego świra </h1>
+<h1>Witamy <%= current_user.full_name %></h1>
