add search action

--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,3 +1,4 @@
-<img src="https://3lbf6l2jthwj1sovtw21iy86-wpengine.netdna-ssl.com/wp-content/uploads/2017/06/Arnold-Schwarzenegger-696x426.jpeg" class="img-thumbnail">
+<img class="img-thumbnail">
+  <%= image_tag("Arnold-Schwarzenegger-696x426.jpeg", :alt => "rss feed") %>
+</img>
 <h1>Witamy <%= current_user.full_name %></h1>
-
