--- a/app/views/trainings/search.erb
+++ b/app/views/trainings/search.erb
@@ -1,7 +1,7 @@
 <h1> Search for your training </h1>
 
 <br>
-<%= form_tag training_search_path, remote: true, method: :get, id: "training-lookup-form" do %>
+<%= form_tag training_search_new_path, remote: true, method: :get, id: "training-lookup-form" do %>
   <div class="form-group row no-padding text-center col-md-12">
     <div class="col-md-10">
       <%= text_field_tag :training, params[:training], placeholder:"Enter training name or date", autofocus: true, class: "form-control search-box input-lg" %>
@@ -13,5 +13,3 @@
     </div>
   </div>
 <% end %>
-
-<%= render 'trainings/result' %>
