--- a/app/views/trainings/result.html.erb
+++ b/app/views/trainings/result.html.erb
@@ -19,7 +19,7 @@
   <tbody>
     <% training.each do |training| %>
       <tr>
-        <td><%= training.name %></td>
+        <td><%= link_to training.name, user_training_path(current_user, training) %></td>
         <td><%= training.discipline.name %></td>
       </tr>
     <% end %>
