--- a/app/views/trainings/result.html.erb
+++ b/app/views/trainings/result.html.erb
@@ -14,13 +14,15 @@
 <table class="table table-hover">
   <thead>
     <th> Name </th>
+    <th> Date </th>
     <th> Discipline </th>
   </thead>
   <tbody>
     <% training.each do |training| %>
       <tr>
         <td><%= link_to training.name, user_training_path(current_user, training) %></td>
-        <td><%= training.discipline.name %></td>
+        <td><%= training.dateoftraining %></td>
+        <td><%= link_to training.discipline.name, discipline_path(training.discipline) %></td>
       </tr>
     <% end %>
   </tbody>
