update traing views and add links

--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -23,6 +23,10 @@
       <td>Training intensity</td>
       <td><%= @training.intensitylevel %></td>
     </tr>
+    <tr>
+      <tr>
+        <td>Discipline</td>
+        <td><%= link_to @training.discipline.name,  discipline_path(@training.discipline) %></td>
+      </tr>
   </tbody>
 </table>
-<%= @training.discipline.name %>
