--- a/app/views/trainings/result.html.erb
+++ b/app/views/trainings/result.html.erb
@@ -1,20 +1,8 @@
-<%= form_tag training_search_new_path, method: :get, id: "training-lookup-form" do %>
-  <div class="form-group row no-padding text-center col-md-12">
-    <div class="col-md-10">
-      <%= text_field_tag :training, params[:training], placeholder:"Enter training name or date", autofocus: true, class: "form-control search-box input-lg" %>
-    </div>
-    <div class="col-md-2">
-      <%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
-      <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
-      <% end %>
-    </div>
-  </div>
-<% end %>
-
 <table class="table table-hover">
   <thead>
     <th> Name </th>
     <th> Date </th>
+    <th> Elapsed Time </th>
     <th> Discipline </th>
   </thead>
   <tbody>
@@ -22,6 +10,7 @@
       <tr>
         <td><%= link_to training.name, user_training_path(current_user, training) %></td>
         <td><%= training.dateoftraining %></td>
+        <td><%= training.trainingtime_minutes %></td>
         <td><%= link_to training.discipline.name, discipline_path(training.discipline) %></td>
       </tr>
     <% end %>
