Update search by disciplines and add button

--- a/app/views/trainings/result.html.erb
+++ b/app/views/trainings/result.html.erb
@@ -16,3 +16,6 @@
     <% end %>
   </tbody>
 </table>
+<div class="col-md-offset-4 col-md-4">
+  <%= link_to "Search for another training", training_search_path, class: "btn btn-lg btn-info" %>
+</div>
