Add corrections and rename training table columns

--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -6,7 +6,7 @@
         <%= link_to training.name, user_training_path(current_user,training) %>
       </div>
       <div class="trainig-description">
-        <%= training.dateoftraining %>
+        <%= training.date_of_training %>
       </div>
     </div>
   </div>
