--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -9,7 +9,7 @@
   <tbody>
     <tr>
       <td>Date of training</td>
-      <td><%= @training.dateoftraining %></td>
+      <td><%= @training.date_of_training %></td>
     </tr>
     <tr>
       <td>Distance [meters]</td>
@@ -17,7 +17,7 @@
     </tr>
     <tr>
       <td>Training time [minutes]</td>
-      <td><%= @training.trainingtime_minutes %></td>
+      <td><%= @training.time_in_minutes %></td>
     </tr>
     <tr>
       <td>Training intensity</td>
