--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -17,19 +17,19 @@
             <% end %>
           </ul>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trainings <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <% if current_user %>
+        <% if user_signed_in? %>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trainings <span class="caret"></span></a>
+            <ul class="dropdown-menu">
               <li><%= link_to "My Trainings", user_trainings_path(current_user) %></li>
               <li><%= link_to "Search for training", training_search_path %></li>
-            <% end %>
-          </ul>
-        </li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right col-md-4">
         <div class="row">
-          <% if current_user %>
+          <% if user_signed_in? %>
             <li class="col-md-8 text-right user-edit">
               <span class="glyphicon glyphicon-user"></span>
               <%= link_to current_user.full_name, edit_user_registration_path(current_user), class:"navbar-link" %>
