--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -32,7 +32,7 @@
           <% if user_signed_in? %>
             <li class="col-md-8 text-right user-edit">
               <span class="glyphicon glyphicon-user"></span>
-              <%= link_to current_user.full_name, edit_user_registration_path(current_user), class:"navbar-link" %>
+              <%= link_to current_user.full_name + " Profile", my_profile_path, class:"navbar-link" %>
             </li>
             <li class="col-md-4 logout-login">
               <%= link_to "Logout", destroy_user_session_path, class: "btn btn-xs btn-danger", method: :delete %>
