--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -3,7 +3,8 @@
 </img>
 
 <h1>
-  Witamy <% if user_signed_in? %>
-  <%= current_user.full_name %>
+  Witamy
+  <% if user_signed_in? %>
+    <%= current_user.full_name %>
   <% end %>
 </h1>
