--- a/app/views/users/my_profile.erb
+++ b/app/views/users/my_profile.erb
@@ -1,12 +1,22 @@
 <h1><%= current_user.full_name %> profile </h1>
-
-<table class="table-striped table-hover">
+<div class="col col-md-10">
+<table class="table table-striped">
   <thead>
     <th> Statistics: </th>
   </thead>
   <tbody>
-
+    <tr>
+      <td>Number of trainings:</td>
+      <td><%= current_user.trainings.count %></td>
+    </tr>
+    <tr>
+      <td>Elapsed time:</td>
+      <td><%= @time %></td>
+    </tr>
   </tbody>
 </table>
+</div>
 
+<div class="col col-md-4">
 <%= link_to "Edit Profile", edit_user_registration_path(current_user), class:"btn btn-lg btn-info" %>
+</div>
