--- a/app/views/friendships/results.erb
+++ b/app/views/friendships/results.erb
@@ -4,7 +4,7 @@
   <tbody>
     <% @search_user.each do |user| %>
       <tr>
-        <td><strong>Name:</strong><%= user.first_name %></td>
+        <td><strong>Name:</strong><%= "#{user.first_name}  #{user.second_name}" %></td>
         <td><strong>Email:</strong><%= user.email %></td>
         <td><strong>Profile:</strong> <%= link_to "View profile", user_path(user), class: "btn btn-xs btn-info" %>
         </td>
