--- a/app/views/friendships/results.erb
+++ b/app/views/friendships/results.erb
@@ -1,17 +1,17 @@
 <% unless @search_user.blank? %>
 <div class="well results-block col-md-10">
-<table class="search-results-table col-md-12">
-  <tbody>
-    <% @search_user.each do |user| %>
-      <tr>
-        <td><strong>Name:</strong><%= "#{user.first_name}  #{user.second_name}" %></td>
-        <td><strong>Email:</strong><%= user.email %></td>
-        <td><strong>Profile:</strong> <%= link_to "View profile", user_path(user), class: "btn btn-xs btn-info" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="search-results-table col-md-12">
+    <tbody>
+      <% @search_user.each do |user| %>
+        <tr>
+          <td><strong>Name:</strong><%= "#{user.decorate.full_name}" %></td>
+          <td><strong>Email:</strong><%= user.email %></td>
+          <td><strong>Profile:</strong> <%= link_to "View profile", user_path(user), class: "btn btn-xs btn-info" %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
 <% end %>
 
