--- a/app/views/trainings/search.erb
+++ b/app/views/trainings/search.erb
@@ -4,7 +4,7 @@
 <%= form_tag training_search_new_path, id: "training-lookup-form" do %>
   <div class="form-group row no-padding text-center col-md-12">
     <div class="col-md-10">
-      <%= text_field_tag :training, params[:training], placeholder:"Enter training name or date", autofocus: true, class: "form-control search-box input-lg" %>
+      <%= text_field_tag :training, params[:training], placeholder:"Enter training name, discipline or date", autofocus: true, class: "form-control search-box input-lg" %>
     </div>
     <div class="col-md-2">
       <%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
