--- a/app/views/friendships/results.erb
+++ b/app/views/friendships/results.erb
@@ -7,6 +7,7 @@
           <td><strong>Name:</strong><%= "#{user.decorate.full_name}" %></td>
           <td><strong>Email:</strong><%= user.email %></td>
           <td><strong>Profile:</strong> <%= link_to "View profile", user_path(user), class: "btn btn-xs btn-info" %>
+          <%= link_to "Add friend", add_friend_path(user: current_user, friend: user),class: "btn btn-xs btn-success", method: :post %>
           </td>
         </tr>
       <% end %>
