--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -26,6 +26,15 @@
             </ul>
           </li>
         <% end %>
+        <% if user_signed_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Place <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+           <li><%= link_to "Places", places_path %></li>
+           <li><%= link_to "New Places", new_place_path %></li>
+          </ul>
+         </li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right col-md-4">
         <div class="row">
