--- a/app/views/users/my_friends.erb
+++ b/app/views/users/my_friends.erb
@@ -1,6 +1,6 @@
 <h1>My Friends </h1>
 <br>
-<% unless @friendships.blank? %>
+<% if @friendships %>
   <div class="wellcol-md-10">
     <table class="search-results-table col-md-12">
       <tbody>
