Udpdate img to heroku

--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,6 +1,4 @@
-<img class="img-thumbnail">
-  <%= image_tag("Arnold-Schwarzenegger-696x426.jpeg", :alt => "rss feed") %>
-</img>
+<img class="img-thumbnail" src="https://ae01.alicdn.com/kf/HTB1qzUIQVXXXXbAXpXXq6xXFXXXD/Inspiracja-Arnold-Schwarzenegger-Kulturystyka-plakat-Decor.jpg_640x640.jpg"> </img>
 
 <h1>
   Witamy <%= if user_signed_in?; current_user.full_name end %>
